--- a/GaLib.Interop/GaLib.Interop.csproj
+++ b/GaLib.Interop/GaLib.Interop.csproj
@@ -43,20 +43,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Protocol\Definition.cs" />
-    <Compile Include="Protocol\CallServer.cs" />
+    <Compile Include="Dispatcher.cs" />
+    <Compile Include="Messaging\AsyncResult.cs" />
+    <Compile Include="Messaging\IMessageHandler.cs" />
+    <Compile Include="Messaging\MessageWriteState.cs" />
+    <Compile Include="Messaging\MessageReadState.cs" />
+    <Compile Include="Messaging\MessageManager.cs" />
     <Compile Include="IObjectMapper.cs" />
     <Compile Include="IPC\IpcCallback.cs" />
     <Compile Include="IPC\IpcClientPipe.cs" />
     <Compile Include="IPC\IpcPipeData.cs" />
     <Compile Include="IPC\IpcServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Protocol\FieldAttribute.cs" />
-    <Compile Include="Protocol\IMessage.cs" />
-    <Compile Include="Protocol\AMessage.cs" />
-    <Compile Include="Protocol\MessageId.cs" />
-    <Compile Include="Protocol\MessageType.cs" />
-    <Compile Include="Proxy\DelegateInterceptor.cs" />
+    <Compile Include="Messaging\MessageFieldAttribute.cs" />
+    <Compile Include="Messaging\AMessage.cs" />
+    <Compile Include="Messaging\Messages\MessageId.cs" />
+    <Compile Include="Messaging\StreamHelper.cs" />
+    <Compile Include="Messaging\MessageType.cs" />
     <Compile Include="IReflectionCaller.cs" />
     <Compile Include="Proxy\Proxify.cs" />
     <Compile Include="Proxy\ProxyObject.cs" />
@@ -64,15 +67,11 @@
     <Compile Include="Proxy\RemoteCallerImpl.cs" />
     <Compile Include="RpcClient.cs" />
     <Compile Include="RpcServer.cs" />
-    <Compile Include="Protocol\Serialization\MessageType.cs" />
-    <Compile Include="Protocol\Messages\MethodInfoRequest.cs" />
-    <Compile Include="Protocol\Serialization\IdentifierType.cs" />
-    <Compile Include="Protocol\Messages\Call.cs" />
-    <Compile Include="Protocol\Messages\DefinitionAnswer.cs" />
-    <Compile Include="Protocol\Messages\MethodResult.cs" />
-    <Compile Include="Protocol\Serialization\Identifier.cs" />
-    <Compile Include="Protocol\Serialization\SerializationCaller.cs" />
-    <Compile Include="Protocol\BytesBuffer.cs" />
+    <Compile Include="Messaging\Messages\MethodInfoRequest.cs" />
+    <Compile Include="Messaging\Messages\CallRequest.cs" />
+    <Compile Include="Messaging\Messages\CallAnswer.cs" />
+    <Compile Include="Messaging\Messages\MethodInfoAnswer.cs" />
+    <Compile Include="Messaging\BytesBuffer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
