--- a/GaLib.Interop.Test/GaLib.Interop.Test.csproj
+++ b/GaLib.Interop.Test/GaLib.Interop.Test.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PipeTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy\ITest1.cs" />
