--- a/GaLib.Interop/GaLib.Interop.csproj
+++ b/GaLib.Interop/GaLib.Interop.csproj
@@ -43,9 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dispatcher.cs" />
+    <Compile Include="CallHandler.cs" />
+    <Compile Include="ICallHandler.cs" />
+    <Compile Include="MessageProcessor.cs" />
     <Compile Include="Messaging\AsyncResult.cs" />
-    <Compile Include="Messaging\IMessageHandler.cs" />
+    <Compile Include="Messaging\BytesBuffer.cs" />
+    <Compile Include="Messaging\MessageReader.cs" />
+    <Compile Include="Messaging\Messages\ConnectionInfoRequest.cs" />
+    <Compile Include="Messaging\Messages\ConnectionInfoAnswer.cs" />
     <Compile Include="Messaging\MessageWriteState.cs" />
     <Compile Include="Messaging\MessageReadState.cs" />
     <Compile Include="Messaging\MessageManager.cs" />
@@ -54,6 +59,9 @@
     <Compile Include="IPC\IpcClientPipe.cs" />
     <Compile Include="IPC\IpcPipeData.cs" />
     <Compile Include="IPC\IpcServer.cs" />
+    <Compile Include="Pipes\Client.cs" />
+    <Compile Include="Pipes\ServerClient.cs" />
+    <Compile Include="Pipes\Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Messaging\MessageFieldAttribute.cs" />
     <Compile Include="Messaging\AMessage.cs" />
@@ -71,7 +79,7 @@
     <Compile Include="Messaging\Messages\CallRequest.cs" />
     <Compile Include="Messaging\Messages\CallAnswer.cs" />
     <Compile Include="Messaging\Messages\MethodInfoAnswer.cs" />
-    <Compile Include="Messaging\BytesBuffer.cs" />
+    <Compile Include="Messaging\BytesBufferBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
